force-app/main/default/objects/Deployment_Task__c/Deployment_Task__c.object-meta.xml
<CustomObject>
    <description>This Object is Deployment Task to create task.</description>
    <label>Deployment Task</label>
    <nameField>
        <displayFormat>DT-{0000}</displayFormat>
        <label>Deployment Task Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>