force-app/main/default/objects/Deployment_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field Used for Deployment Task.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Deployment_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>