force-app/main/default/objects/Deployment_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>This field used for Deployment Task Object.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>